<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Demo</string>

    <string-array name="navigation_labels">
        <item>Notificare</item>
        <item>Products</item>
        <item>Assets</item>
        <item>Locations</item>
        <item>Beacons</item>
        <item>User Profile</item>
        <item>Inbox</item>
        <item>Settings</item>
    </string-array>
    <string-array name="navigation_urls">
        <item>func:Main</item>
        <item>func:Products</item>
        <item>func:Assets</item>
        <item>func:Map</item>
        <item>func:Beacons</item>
        <item>func:Login</item>
        <item>func:Inbox</item>
        <item>func:Settings</item>
    </string-array>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="action_websearch">Search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="loader_signin">Authenticating...</string>
    <string name="loader_connection">Contacting server...</string>
    <string name="loader">Loading...</string>
    <string name="signout">Logging out...</string>
    <string name="loader_generate_token">Generating new token...</string>
    <string name="title_sign_in">Sign in</string>
    <string name="title_sign_up">Sign up</string>
    <string name="title_lost_pass">Forgotten password</string>
    <string name="title_reset_pass">Reset password</string>
    <string name="title_change_pass">change password</string>
    <string name="text_change_pass">Type a new password</string>
    <string name="title_generate_token">generate new email token</string>
    <string name="title_validate">Validate</string>
    <string name="title_settings">Settings</string>
    <string name="title_ibeacons">BT LE Beacons</string>
    <string name="title_signout">signout</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_products">Products</string>
    <string name="title_clear">Clear</string>
    <string name="title_delete">Delete</string>
    <string name="title_empty_products">No products found</string>
    <string name="title_empty_inbox">No messages found</string>
    <string name="title_empty_beacons">No beacons found. Make sure your Bluetooth is enabled.</string>
    <string name="title_search_assets">Search</string>
    <string name="title_empty_assets">No assets found</string>
    <string name="header_user_profile">My Profile</string>
    <string name="header_user_preferences">My Info</string>
    <string name="hint_email">email</string>
    <string name="hint_pass">password</string>
    <string name="hint_name">name</string>
    <string name="hint_confirm_pass">confirm password</string>
    <string name="hint_search_assets">input an asset group</string>
    <string name="button_sign_in">sign in</string>
    <string name="button_sign_up">create an account</string>
    <string name="button_forgot_pass">forgotten password</string>
    <string name="button_lost_pass">recover password</string>
    <string name="button_reset_pass">reset password</string>
    <string name="button_location_permission_rationale_ok">got it</string>
    <string name="error_sign_in">Invalid credentials</string>
    <string name="error_sign_up">Please fill in all fields</string>
    <string name="error_lost_pass">Please fill in a valid email</string>
    <string name="error_reset_pass">Please fill in a new password</string>
    <string name="error_reset_pass_confirm">Please confirm the new password</string>
    <string name="error_invalid_name">Please insert your name</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_pass_too_short">Password is too short</string>
    <string name="error_pass_not_match">Passwords don\'t match. Please confirm the same password twice.</string>
    <string name="error_email_not_found">No account found for that email</string>
    <string name="error_generate_token">Could not generate token</string>
    <string name="error_change_password">Could not change password</string>
    <string name="success_account_created">Account created successfully. You can now sign in.</string>
    <string name="success_email_found">Account found. Please check your mailbox for more information.</string>
    <string name="success_reset_pass">Password changed successfully. You can now sign in.</string>
    <string name="success_generate_token">New token generated successfully.</string>
    <string name="success_change_password">Password changed successfully.</string>
    <string name="content_description_beacon_icon">beacon</string>
    <string name="tutorial_title_page_three">You are all set to go!</string>
    <string name="tutorial_button_page_three">Open Dashboard</string>
    <string name="tutorial_text_page_three">Start using this demo app to test all the features of Notificare - Mobile Marketing Platform.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_user_position">Your current location</string>
    <string name="alert_inapp_purchase_demo">This add-on is not available for this demo app. Please send us your contact and we will invite you to a in-app billing demo app.</string>
    <string name="alert_storage_disabled">This add-on is not available for this demo app. Please enable the Storage Service in the Notificare Dashboard.</string>
    <string name="alert_location_permission_rationale">We will need to make use of your location to present relevant information about offers around you.</string>
</resources>
