<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:background="@color/wildsand">
    
	<ScrollView android:id="@+id/ScrlView" 
	    android:layout_width="fill_parent" 
	    android:layout_height="fill_parent"
        android:background="@color/wildsand">
		<LinearLayout 
	        android:id="@+id/layoutForScroll" 
	        android:orientation="vertical" 
	        android:layout_width="fill_parent" 
	        android:layout_height="fill_parent"
	        android:background="@color/wildsand" >


			<EditText 
				android:id="@+id/nameField"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
				android:hint="@string/hint_name" >
			</EditText>
			
			<EditText 
				android:id="@+id/emailField"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
				android:inputType="textEmailAddress"
				android:hint="@string/hint_email" >
			</EditText>
			
			<EditText 
				android:id="@+id/passField"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
				android:inputType="textPassword"
				android:hint="@string/hint_pass" >
			</EditText>
			
			<EditText 
				android:id="@+id/confirmPassField"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
				android:inputType="textPassword"
				android:hint="@string/hint_confirm_pass" >
			</EditText>
			
			<Button
				android:id="@+id/buttonSignup"
				android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:textColor="#FFFFFF"
                android:background="@color/mantis"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
				android:text="@string/button_sign_up"
				android:textSize="20dp"
				 />
		 
		</LinearLayout>
	</ScrollView>
</LinearLayout>
